# options-hedge-engine

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  DISCLAIMER.md  README.md  RISKS.md
.github/workflows/: publish-book.yml  python.yml
book/: _config.yml  _toc.yml  formal_guarantees.md  intro.md  references.bib
book/architecture/: overview.md
docs/: _config.yml  formal_guarantees.md  human_ai.md  intro.md  wrds_data_download.md
docs/architecture/: overview.md
lean/: OptionHedge.lean  lakefile.lean
lean/OptionHedge/: Accounting.lean  Basic.lean  Invariants.lean  OptionInvariants.lean
lean/OptionHedge/Tests/: UnitTests.lean
notebooks/: delta_hedge_demo.ipynb
python/: Makefile  pyproject.toml  setup.py  setup_ffi.py
python/src/hedge_engine/backtest/: __init__.py  runner.py  scenarios.py
python/src/hedge_engine/etl/: __init__.py  data_types.py  wrds_loader.py
python/src/hedge_engine/ffi/: __init__.py  lean_ffi.pyx
python/src/hedge_engine/pricer/: __init__.py  black_scholes.py
python/src/hedge_engine/simulator/: __init__.py  gbm.py
python/tests/: test_audit.py  test_backtest.py  test_edge_cases.py  test_etl.py  test_ffi.py  test_pricer.py  test_scaffold.py
scripts/: wrds_csv_to_parquet.py
